--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
   <div class="mw8 center">
 
-    <div class="w-90 center">
+    <div class="w-90 center cf">
 
       <div class="fl w-100 w-third-m w-third-l pa2 db center">
         <img class="mw4 mw4-ns mw5-l db center br-100" src="resources/profilepic.jpg" alt="Profile Picture" />
@@ -56,8 +56,8 @@
     </div>
 
     <div class="w-90 center pb4">
-      <article class="w-90 center sans-serif" data-name="slab-stat">
-        <h3 class="f4 ttu tracked lh-title">Things I Can Do</h3>
+      <article class="w-90 center sans-serif">
+        <h3 class="f4 ttu tracked lh-title">My Skillset</h3>
 
         <div class="cf">
 
