--- a/arteryschool.html
+++ b/arteryschool.html
@@ -42,32 +42,29 @@
           Varun Mathew & Calum York
         </h2>
         <time class="f6 ttu tracked gray">Design: Integration, 2016</time>
+        <div class="pt3">
+          <h4 class="f7 fw6 ttu tracked">Skills Employed</h4>
+          <dl class="f7 lh-title mv2 bl bw1 b--red">
+            <dt class="dib ml0 pl3 b">Challenging Norms</dt>
+            <dd class="dib ml0 pl3 gray">We took a very deliberate set of steps to push back against parts of the brief that would not have been time well spent and therefore were able to focus on creating exactly what we needed to convey our concept.</dd>
+          </dl>
+          <dl class="f7 lh-title mv2 bl bw1 b--red">
+            <dt class="dib ml0 pl3 b">Reliability</dt>
+            <dd class="dib ml0 pl3 gray">Having worked on a project together previously, we knew that we could split up the tasks and return with them completed to a high standard.</dd>
+          </dl>
+          <dl class="f7 lh-title mv2 bl bw1 b--red">
+            <dt class="dib ml0 pl3 b">Humour</dt>
+            <dd class="dib ml0 pl3 gray">To make the final semester of architecture enjoyable (and bearable), we added some humour to our manifesto, to our final drawing and in our final 'model within a model'.</dd>
+          </dl>
+         </div>
       </header>
 
-      <div class="fn fl-ns w-50-ns">
+      <div class="fn fl-ns w-50-ns pt3 pt0-ns">
         <p class="f5 lh-copy measure mt0-ns">
-          For our final undergraduate project, this design studio focussed on creating an entire visual arts high school as well as its pedagogy. The site for this project was at Carriageworks in Eveleigh, Sydney that sits right next to the train tracks at Redfern Station.<br><br>
-          As an art high school, Eclectic Education and the Collaged College seeks to emphasize the importance of the artistic process as being as important as the final product itself. Taking such a stance leads to certain outcomes, namely being the creation of a series of buildings that differ dramatically in form, texture and spatial experience. Without the provision of dedicated exhibition spaces, the studio spaces in which students and resident artists work become the exhibition spaces. Furthermore, the connection of these differing buildings via the programmatically-constant ARTery, with its provision of both typical building services (water, HVAC, electricity) and atypical services (paint, ink, goods transport), allows the entire site to become a studio space for those who wish to see it that way.
+          As an art high school, Eclectic Education and the Collaged College seeks to emphasize the importance of the artistic process as being as important as the final product itself. Taking such a stance leads to certain outcomes, namely being the creation of a series of buildings that differ dramatically in form, texture and spatial experience. Without the provision of dedicated exhibition spaces, the studio spaces in which students and resident artists work become the exhibition spaces. Furthermore, the connection of these differing buildings via the programmatically-constant ARTery, with its provision of both typical building services (water, HVAC, electricity) and atypical services (paint, ink, goods transport), allows the entire site to become a studio space for those who wish to see it that way.<br><br>
+          We realised that conducting the usual diagrammatic analysis of the site (public/private space, sight lines, thoroughfare, etc.) was not going to provide any rich or unique understanding of the site, so instead we put all our effort towards creating a manifesto. Displayed on a series of postcards, the captured the essence of what was to be our architecture and pedagogical stance on this visual arts high school.<br><br>
         </p>
 
-        <p class="f5 fw6 ttu tracked fs-normal pt3">Manifesto</p>
-        <p class="f5 lh-copy measure">
-          We realised that conducting the usual diagrammatic analysis of the site (public/private space, sight lines, thoroughfare, etc.) was not going to provide any rich or unique understanding of the site, so instead we put all our effort towards creating a manifesto. Displayed on a series of postcards, the captured the essence of what was to be our architecture and pedagogical stance on this visual arts high school.<br>
-          Designed as a series of eight succinct statements, the postcard series served to distill the arguments put forth by our architecture and remove any necessity for the inclusion of text on the primary drawing.<br><br>
-          Our visual arts high school challenged two traditional concepts through its pedagogy: traditional school hours and the concept of years separate by age. School days do not necessarily need to run from 9-3, as creativity and inspiration is not restricted to striking within those hours. Likewise, the potential exists for knowledge to be passed down as well as up, as students mingle and learn in environments not restricted to arbitrary year groups based on date of birth.
-        </p>
-
-        <p class="f5 fw6 ttu tracked fs-normal pt3">Architecture</p>
-        <p class="f5 lh-copy measure">
-          The school consisted of multiple buildings of different architectural styles, each unique and aesthetically disparate housing a specific creative or artistic program within. This in turn with the method of collaging plans and sections from buildings or drawings we admired (Nakagin Capsule Tower or Atelier Bow-Wow's sectional masterpieces to name a few) was the reason behind the name the Collaged College.<br><br>
-          Everything was connected by the Art-ery, a raised walkway that was both an egress route and the supplier of the services required by the buildings such as HVAC, water, electricity, paint and school-wide pneumatic delivery systems. Normally these services are hidden in the ceiling, walls and floors but we wanted to celebrate them making them practical parts of the architecture itself (like handrails).
-        </p>
-
-        <p class="f5 fw6 ttu tracked fs-normal pt3">Manifesto</p>
-        <p class="f5 lh-copy measure">
-          1:100 (with in-process Site Model at 1:1000)<br><br>
-          Cast cement, aluminium rods, 3D printed roof structure with Spakfilla coating for cast appearance, laser cut acrylic infill, CNC milled foam (Site Model). Designed to highlight the importance of process in the production of art, the Fabrication Lab model was undertaken using processes that inherently highlight process, every little mistake shown in the result of the casting. The deliberately incomplete 1:1000 site model sits within, poised as a project of students' invention, rather than the architects'.
-        </p>
       </div>
     </article>
 
@@ -75,7 +72,7 @@
 
   <div class="w-100 center">
     <a name="marker" href="arteryschool.html#marker" style="background-image: url(resources/school_roof.jpg)"; class="link w-100 dt hide-child cover bg-center fn">
-      <span class="white dtc v-mid w-100 h-100 child bg-black-40 pa5 sans-serif">
+      <span class="white dtc v-mid w-100 h-100 child bg-black-50 pa5 sans-serif">
         <article class="center mw5 mw6-ns hidden ba mv4">
           <h1 class="f4 bg-near-black white mv0 pv2 ph3">Model Roof</h1>
           <div class="pa3 bt">
@@ -88,12 +85,12 @@
     </a>
 
     <a name="marker2" href="arteryschool.html#marker2" style="background-image: url(resources/school_foam.jpg)"; class="link w-100 w-50-ns dt hide-child cover bg-center fl">
-      <span class="white dtc v-mid w-100 h-100 child bg-black-40 pa5 sans-serif">
+      <span class="white dtc v-mid w-100 h-100 child bg-black-50 pa5 sans-serif">
         <article class="center mw5 mw6-ns hidden ba mv4">
           <h1 class="f4 bg-near-black white mv0 pv2 ph3">Model Within a Model</h1>
           <div class="pa3 bt">
             <p class="f6 f5-ns lh-copy measure mv0">
-              CNC machined polystyrene site model housed within the model of the fabrication lab. It is an incomplete model to insinuate the fact that the students of the school are fabricating it themselves.
+              CNC machined polystyrene site model housed within the model of the fabrication lab. The deliberately incomplete 1:1000 site model sits within, poised as a project of students' invention, rather than the architects'.
             </p>
           </div>
         </article>
@@ -101,12 +98,12 @@
     </a> 
 
     <a name="marker3" href="arteryschool.html#marker3" style="background-image: url(resources/school_model.jpg)"; class="link w-100 w-50-ns dt hide-child cover bg-center fn">
-      <span class="white dtc v-mid w-100 h-100 child bg-black-40 pa5 sans-serif">
+      <span class="white dtc v-mid w-100 h-100 child bg-black-50 pa5 sans-serif">
         <article class="center mw5 mw6-ns hidden ba mv4">
           <h1 class="f4 bg-near-black white mv0 pv2 ph3">Full Model</h1>
           <div class="pa3 bt">
             <p class="f6 f5-ns lh-copy measure mv0">
-              Cast model base with 3D printed roof and polystyrene site model. This is a part sectional and part diagrammatic model of the Fabrication Lab: one of the main buildings in the school.
+              1:100 (with in-process Site Model at 1:1000) - Cast cement, aluminium rods, 3D printed roof structure, laser cut acrylic infill, CNC milled foam (Site Model).
             </p>
           </div>
         </article>
