--- a/exchange.html
+++ b/exchange.html
@@ -42,41 +42,35 @@
           Varun Mathew
         </h2>
         <time class="f6 ttu tracked gray">Denmark, 2016</time>
+        <div class="pt3">
+          <h4 class="f7 fw6 ttu tracked">Skills Employed</h4>
+          <dl class="f7 lh-title mv2 bl bw1 b--light-pink">
+            <dt class="dib ml0 pl3 b">Adaptability</dt>
+            <dd class="dib ml0 pl3 gray">This was a whole new experience in a foreign country and I had to make the most of my educational and life experiences whilst over there.</dd>
+          </dl>
+          <dl class="f7 lh-title mv2 bl bw1 b--light-pink">
+            <dt class="dib ml0 pl3 b">Approachability</dt>
+            <dd class="dib ml0 pl3 gray">It was easy for me to make friends and I could work well with the locals because of my openness.</dd>
+          </dl>
+          <dl class="f7 lh-title mv2 bl bw1 b--light-pink">
+            <dt class="dib ml0 pl3 b">Resourcefulness</dt>
+            <dd class="dib ml0 pl3 gray">I had to make the most of my limited knowledge and time to ensure that I could complete the tasks for both university and living abroad.</dd>
+          </dl>
+         </div>
       </header>
 
-      <div class="fn fl-ns w-50-ns">
-        <p class="f5 fw6 ttu tracked fs-normal">Material Exploration</p>
+      <div class="fn fl-ns w-50-ns pt3 pt0-ns">
         <p class="f5 lh-copy measure">
-          The first half of the design studio I was a part of at the Aarhus School of Architecture was a material exploration exercise. This was the first experience during my architectural degree of understanding the properties of a material through hands-on use. We were introduced to LECA, a light-weight expanded clay aggregate. These round 'nuts' consist of 85% air due to the expansion process producing a honeycomb structure inside the nut. This gives them incredibly useful properties such as improved insulation, both thermally and auditory.<br>
-          The clay nuts can be combined using a binder, such as cement, to create building blocks or can be used raw for its water-filtering properties or as a foundation filler.
+          The first half of the design studio I was a part of at the Aarhus School of Architecture was a material exploration exercise. This was the first experience during my architectural degree of understanding the properties of a material through hands-on use. We were introduced to LECA, a light-weight expanded clay aggregate. These round 'nuts' consist of 85% air due to the expansion process producing a honeycomb structure inside the nut. This gives them incredibly useful properties such as improved insulation, both thermally and auditory, and increased strength.
         </p>
 
         <iframe src="https://drive.google.com/file/d/1ZRUZhh-ciWqjpIlQON1CTCtdL22XpPjc/preview" class="h-100" frameborder="0" allowfullscreen></iframe>
 
         <p class="f5 fw6 ttu tracked fs-normal pt3">Conceptual Project</p>
         <p class="f5 lh-copy measure">
-          The second half of the studio was a project brief creating a space for reflection in an area called the Godsbanen. People express themselves in different ways especially when reflecting and I wanted to create an environment that manifests these reflections, enhances these experiences for the reflectee but also observers and that is adaptable to the users needs.
-        </p>
-
-        <p class="f5 fw6 ttu tracked fs-normal pt3">Manifesto</p>
-        <p class="f5 lh-copy measure">
-          Reflection is generally understood to be a solitary or silent act; it is often associated with meditation and religion.<br><br>
-          But why restrict yourself to silence and solitude? To express oneself helps to solidify their thoughts, clear their doubts and form their conclusions.<br><br>
-          Everyone has a different means of reflecting and a space should be able to accommodate for such those who prefer to be alone as well as those who want to be around others. So why not allow the user to create their perfect space?
-        </p>
-
-        <p class="f5 fw6 ttu tracked fs-normal pt3">Modular Architecture</p>
-
-        <blockquote class="sans-serif ml0 mt0 pl4 black-90 bl bw2 b--light-pink">
-          <p class="f6 i lh-copy measure mt0">
-            The grid is mankind's attempt to control and bring order to chaos. We rely on grids to maintain order and we use them daily without knowing - Excel spreadsheets, keyboards, parking spaces, graph paper, rows of iPhone icons, city streets, column layouts, tile floors - the list is endless. But the grid is a backdrop - able to contain dissimilarities and anticipating an action or disruption - a zone of potential.
-          </p>
-          <cite class="f6 ttu tracked fs-normal">&mdash; May, K. 2013, Sci-fi</cite>
-        </blockquote>
-
-        <p class="f5 lh-copy measure">
+          The second half of the studio was a project brief creating a space for reflection in an area called the Godsbanen. People express themselves in different ways especially when reflecting and I wanted to create an environment that manifests these reflections, enhances these experiences for the reflectee but also observers and that is adaptable to the users needs.<br><br>
           The architecture consisted of modular components with footprints of 10m by 10m and varying heights depending on the services it needed to connect. Each module consisted of hydraulic pumps to shift the floorplates, adjustable ceiling plates via a pulley system, and a retractable wall system. They floorplates also were shaped so that they could align with another floorplate without having a gap that people could fall through. Strung together over a large area, these components created a dynamic landscape through its monolithic presence.
-        </p> 
+        </p>
 
       </div>
     </article>
