--- a/ftdiplatform.html
+++ b/ftdiplatform.html
@@ -42,16 +42,29 @@
           Tommaso Armstrong, Thomas Aslanian, Isaac Buckton, Varun Mathew, Lily Partridge & Samuel Walker
         </h2>
         <time class="f6 ttu tracked gray">BCII Capstone, 2017</time>
+        <div class="pt3">
+          <h4 class="f7 fw6 ttu tracked">Skills Employed</h4>
+          <dl class="f7 lh-title mv2 bl bw1 b--orange">
+            <dt class="dib ml0 pl3 b">Client Management</dt>
+            <dd class="dib ml0 pl3 gray">We were in constant communication with our clients to ensure that both the design and operations of our project were meeting and exceeding their expectations.</dd>
+          </dl>
+          <dl class="f7 lh-title mv2 bl bw1 b--orange">
+            <dt class="dib ml0 pl3 b">Existing Outside Discipline</dt>
+            <dd class="dib ml0 pl3 gray">The transdisciplinary nature of this project saw me working on parts of the project unrelated to architecture, namely user experience and user interface (UX/UI).</dd>
+          </dl>
+          <dl class="f7 lh-title mv2 bl bw1 b--orange">
+            <dt class="dib ml0 pl3 b">Adaptability</dt>
+            <dd class="dib ml0 pl3 gray">With our clients, several other bodies within the university popped up that we had to navigate and align our work with if we wanted this project to continue to be realised and maintained after the year ends.</dd>
+          </dl>
+         </div>
       </header>
 
-      <div class="fn fl-ns w-50-ns">
+      <div class="fn fl-ns w-50-ns pt3 pt0-ns">
         <p class="f5 lh-copy measure mt0-ns">
-          Being part of the Bachelor of Creative Intelligence and Innovation (BCII) has bee unique experience both for the students and staff involved. We are fuelled by creativity and ambition, and we use transdisciplinary knowledge to solve cutting-edge and real world problems. Over the course of this year, we have been developing a platform for the Faculty of Transdisciplinary Innovation (FTDi) to foster the valued connections between students, alumni, staff and industry.<br><br>
-          The idea began as an alumni network to help fourth-year students stay connected and engaged post-graduation. We envisioned a platform that would facilitate alumni professional development with the concept of transdisciplinary knowledge sharing at its core. The idea has since been refined with the scope broadened to accommodate the wider FTDi system. The new concept envisions a hub for FTDi collaboration - a place where students can showcase their projects, staff can collaborate with students, alumni can stay connected, and industry can search for the best new talent. It is more than just a network: it is a transdisciplinary ecosystem.<br><br>
-          In the history of UTS, no faculty has ever successfully collected and analysed the information from the first cohort through to its present years. Being a new degree, FTDi has the unique opportunity  to gather a rich and holistic understanding of the progression of the degrees and graduates from day one.<br><br>
-          Our solution sits between all the stakeholders - it is a complex solution for a complex opportunity space. Each stakeholder has multiple interactions across the system; there is value for everyone. The platform is based off reciprocal and organic exchange. For example, industry has the ability to search for talent, but also collaborate on student projects; conversely, those students can find jobs but also propose new ideas to industry.<br><br>
-          We began this as a self initiated project, but soon found ourselves with a client: the Faculty of Transdisciplinary Innovation. This gave the project a whole new frame of reality as it became a solution to an fresh opportunity. With the real world deliverables came the real world push and all the meetings with other stakeholders within the university body. We suffered setbacks and moments of bliss, but Lily, Sam and myself pumped out a complete vision of the entire site creating every single mockup we could imagine. These mockups also included features that would not make it into the MVP nicknamed the 'dream states' but they were included to provide the full extent of the platform.<br><br>
-          This project is backed and supported by FTDi and we are hoping to launch the MVP by December 2017/January 2018.
+          Over the course of this year, we have been developing a platform for the Faculty of Transdisciplinary Innovation (FTDi) to foster the valued connections between students, alumni, staff and industry. It is more than just a network: it is a transdisciplinary ecosystem, a place where students can showcase their projects, staff can collaborate with students, alumni can stay connected, and industry can search for the best new talent.<br><br>
+          Our solution works in a complex opportunity space that adds values to all stakeholders. Each stakeholder has multiple interactions across the system through reciprocal and organic exchange. For example, industry has the ability to search for talent, but also collaborate on student projects; conversely, those students can find jobs but also propose new ideas to industry.<br><br>
+          In the history of UTS, no faculty has ever successfully collected and analysed the information from the first cohort through to its present years. FTDi has the unique opportunity  to gather a rich and holistic understanding of the progression of the degrees and graduates from day one.<br><br>
+          This project is backed and supported by FTDi and we are hoping to launch the MVP by December 2017 / January 2018.
         </p>
 
       </div>
