--- a/legacy.html
+++ b/legacy.html
@@ -42,34 +42,27 @@
           Varun Mathew
         </h2>
         <time class="f6 ttu tracked gray">BCII Elective Class, 2017</time>
+        <div class="pt3">
+          <h4 class="f7 fw6 ttu tracked">Skills Employed</h4>
+          <dl class="f7 lh-title mv2 bl bw1 b--blue">
+            <dt class="dib ml0 pl3 b">Teaching</dt>
+            <dd class="dib ml0 pl3 gray">I love sharing my knowlegde with others. Being a tutor has been something I've wanted to do since starting university and this was the perfect opportunity to start.</dd>
+          </dl>
+          <dl class="f7 lh-title mv2 bl bw1 b--blue">
+            <dt class="dib ml0 pl3 b">Existing Outside Discipline</dt>
+            <dd class="dib ml0 pl3 gray">This was a chance to show that my abilities go beyond just architecture and also apply my knowledge through teaching others.</dd>
+          </dl>
+          <dl class="f7 lh-title mv2 bl bw1 b--blue">
+            <dt class="dib ml0 pl3 b">Quick Learner</dt>
+            <dd class="dib ml0 pl3 gray">I needed to be able to relearn what I already knew to confidently teach the basics and it was also an opportunity to go further with front-end development.</dd>
+          </dl>
+         </div>
       </header>
 
-      <div class="fn fl-ns w-50-ns">
+      <div class="fn fl-ns w-50-ns pt3 pt0-ns">
         <p class="f5 lh-copy measure mt0-ns">
-          My legacy project was conducting an elective on 'Developing Technical Skills for your Portfolio' as part of Professional Practice at the Cutting Edge (PPCE). I recognised the growing importance to have the ability to show future employers what we do as transdisciplinary students. Having made physical portfolios in the past, I find that web portfolios and web presence in general have a wider reach and greater visibility in real-time. With this objective in mind, I designed this elective for 4th Year BCII students as a tool to market their transdisciplinary skills and enhance their career prospects. I specifically designed the elective to be universally applicable and thereby have a continued impact on the Faculty of Transdisciplinary Innovation (FTDI) sphere.
-        </p>
-
-        <p class="f5 lh-copy measure">
-          While designing the elective, I took into consideration that people are from different disciplinary backgrounds and have different levels of understanding. To achieve a broad impact, my aim was to make it universally accessible for novices from any background i.e. for future BCII students and staff, other degrees within and outside FTDI, as well as for industry partners. 
-        </p>
-
-        <p class="f5 lh-copy measure">
-          The elective was designed as a practical tutorial where the hands-on aspect meant it was ideal for people to 'learn by doing'. This experience along with the inclusion of templates at the end helped in achieving a deep impact where the interactive learning could continue beyond the class. The structure and order of the elective was specifically designed to introduce one concept at a time to not overload or overwhelm those taking part. It was ideal because people could understand exactly how each line of code began to influence the end result i.e. viewing the output in real time.<br>
-          The structure of the tutorial was certainly well received, further highlighting the deep impact of this elective:
-          <blockquote class="sans-serif ml0 mt0 pl4 black-90 bl bw2 b--blue">
-            <p class="f6 i lh-copy measure mt0">
-              Practical. Live help. Simple steps.<br><br>
-              The teaching method was great! The use of visuals on the board as well as live streaming allowed me to follow what we were doing it and outlined what we were aiming to achieve.<br><br>
-              This lesson [had] a great layout and I've learnt a lot.<br><br>
-              You did an amazing job at breaking down the key concepts and taking us on the journey.
-            </p>
-          </blockquote>
-        </p>
-
-        <p class="f5 fw6 ttu tracked fs-normal pt3">What I Learnt</p>
-        <p class="f5 lh-copy measure">
-          I realised that I underestimated how much time a simple task could take as everyone learns and understands at a different rate. One of the first tasks was to download and install a program, and as soon as I realised how difficult that was for some people, I had to completely reshuffle the pace that I had initially set out. This meant having to cut out a portion of the walkthrough for creating a third web page as I could see that this would have overwhelmed some.<br><br>
-          The main feedback received, indicated that follow-up classes would be beneficial. I believe this is valuable, because trying to fit this content into the space of 2 to 3 hours is too rushed, but with additional classes you can expand and continue to build on the topics covered. I probably had made enough content for 3 lessons, but because this was an experimental student-run elective class, these are the realisations that needed to come out of this lesson.
+          My legacy project was conducting an elective on ‘Developing Technical Skills for your Portfolio’ as part of Professional Practice at the Cutting Edge (PPCE). I recognised the growing importance to have the ability to show future employers what we do as transdisciplinary innovators. Having made physical portfolios in the past, I find that web portfolios and web presence in general have a wider reach and greater visibility in real-time. With this objective in mind, I designed this elective for 4th Year BCII students as a tool to market their transdisciplinary skills and enhance their career prospects.<br><br>
+          While designing the elective, I took into consideration that people are from different disciplinary backgrounds and have different levels of understanding. The elective was designed as a practical tutorial where the hands-on aspect meant it was ideal for people to “learn by doing”. This experience along with the inclusion of templates at the end helped in achieving a deep impact where the interactive learning could continue beyond the class. 
         </p>
 
       </div>
