--- a/microcitylibrary.html
+++ b/microcitylibrary.html
@@ -42,44 +42,28 @@
           Andrea Lam, Varun Mathew & Calum York
         </h2>
         <time class="f6 ttu tracked gray">Design: Performance, 2015</time>
+        <div class="pt3">
+          <h4 class="f7 fw6 ttu tracked">Skills Employed</h4>
+          <dl class="f7 lh-title mv2 bl bw1 b--gold">
+            <dt class="dib ml0 pl3 b">Teamwork / Collaboration</dt>
+            <dd class="dib ml0 pl3 gray">A strong group of architecture students where we each played to our strengths.</dd>
+          </dl>
+          <dl class="f7 lh-title mv2 bl bw1 b--gold">
+            <dt class="dib ml0 pl3 b">Existing Outside Discipline</dt>
+            <dd class="dib ml0 pl3 gray">During this semester I had taken on a Visual Communication core subject as my elective, and made use of my new graphic skills to strengthen the portrayal of our project through drawings.</dd>
+          </dl>
+          <dl class="f7 lh-title mv2 bl bw1 b--gold">
+            <dt class="dib ml0 pl3 b">Critical Evaluation</dt>
+            <dd class="dib ml0 pl3 gray">We drastically changed our project from our mid-term submission and that was because we could openly provide constructive criticism and ensure that we were constantly addressing the brief and pushing beyond.</dd>
+          </dl>
+         </div>
       </header>
 
-      <div class="fn fl-ns w-50-ns">
+      <div class="fn fl-ns w-50-ns pt3 pt0-ns">
         <p class="f5 lh-copy measure mt0-ns">
-          This design studio heavily revolved around the biological terms: genotypes and phenotypes. We used their meanings as a way to abstract and understand precedent buildings and then apply it to our own projects. We applied this process to reveal the genotype, or building blocks, of an architectural library precedent: the DNA of a building, the core abstract concepts that it is trying to convey. Then came the application of these realisations, the visual representations  (phenotype) of the 'building blocks' to create a new architecture - a library.<br><br>
+          The Micro City Library was a collection of distinct experiences both programmatically and through its physical realisation. The library was an inverted experience, with open hallways of books sorted by genre and audience housing related programs within its walls. The over design was not a complete library but rather a system; a protocol for growth.<br><br>
+          This design studio heavily revolved around the biological terms: genotypes and phenotypes. We used their meanings as a way to abstract and understand precedent buildings and then apply it to our own projects. We applied this process to reveal the genotype, or building blocks, of an architectural library precedent: the DNA of a building, the core abstract concepts that it is trying to convey. Then came the application of these realisations, the visual representations  (phenotype) of the 'building blocks' to create a new architecture for a library.<br><br>
           The site of this project was at Railway Square in Sydney, neither a railway nor a square. Using the site and the knowledge of the City of Sydney public transport infrastructure developments, we laid out a grid to create a field condition for our library. This field condition would be warped and manipulated by thoroughfare and public transportation routes, but retain a consistent gridded language to allow it to be read as a whole.<br><br>
-          What happens when the library becomes a condition within the city?<br><br>
-          We were not designing a finished library but rather a system; a protocol for growth.
-        </p>
-
-        <p class="f5 fw6 ttu tracked fs-normal pt3">Manifesto</p>
-        <p class="f5 lh-copy measure">
-          The site of this project was at Railway Square in Sydney, neither a railway nor a square. Using the site and the knowledge of the City of Sydney public transport infrastructure developments, we laid out a grid to create a field condition for our library. This field condition would be warped and manipulated by thoroughfare and public transportation routes, but retain a consistent gridded language to allow it to be read as a whole. 
-        </p>
-
-        <blockquote class="sans-serif ml0 mt0 pl4 black-90 bl bw2 b--gold">
-          <p class="f6 i lh-copy measure mt0">
-            As a reflection of the city it exists within, the Library of the 21st century must be one of adaptation. As such, what we propose is not a radical change or redefinition of the library typology, but a distillation of its individual programmatic elements that are connected through a network of corridors, laneways and thoroughfares that allow each space to be experienced and altered independently, prompting the curiosity of its users.<br><br>
-            A room with an exhibition;<br>
-            A room with a librarian;<br>
-            A room with storage;<br>
-            A room with a restaurant<br><br>
-            But what about the books?<br><br>
-            The books, the heart of any Library, will be pushed to the exterior of each independent program, encasing the phenomena inside and allowing the users to choose their own adventure.
-          </p>
-          <cite class="f6 ttu tracked fs-normal">&mdash; Group 1</cite>
-        </blockquote>
-
-        <p class="f5 fw6 ttu tracked fs-normal pt3">Architecture</p>
-        <p class="f5 lh-copy measure">
-          The site of this project was at Railway Square in Sydney, neither a railway nor a square. Using the site and the knowledge of the City of Sydney public transport infrastructure developments, we laid out a grid to create a field condition for our library. This field condition would be warped and manipulated by thoroughfare and public transportation routes, but retain a consistent gridded language to allow it to be read as a whole. 
-        </p>
-
-        <p class="f5 fw6 ttu tracked fs-normal pt3">Model</p>
-        <p class="f5 lh-copy measure">
-          Our final project model was not place on site nor was it the actual library, but rather, it was a representational model that shared moments from within our library to create character within each space. Just over a metre long, this diagrammatic model, while not a direct representation of our designed library, accentuated the modularity and protocol for growth highlighting new permutations and combinations.<br><br>
-          It was a precisely crafted model at 1:100 scale, featuring laser cut elements, hand-crafted elements and an electroluminescent (EL) panel to provide an interior understanding of the library and its programmatic relations.<br><br>
-          Part of the reason it was a section model was so that we had a flat edge to create a panning video realising the experience of passing through the library.
         </p>
 
         <iframe src="https://drive.google.com/file/d/0BzYOQEBbOMzkczQ1MjRBOU1rdWc/preview" class="h-100" frameborder="0" allowfullscreen></iframe>
@@ -90,10 +74,73 @@
 
   </div>
 
-  <div class="mw-100 center">
-    <img src="resources/library_graphicnovel.jpg" class="w-100" />
+  <div class="w-100 center">
+    <a name="marker" href="microcitylibrary.html#marker" style="background-image: url(resources/library_graphicnovel.jpg)"; class="link w-100 dt hide-child contain bg-center fn">
+      <span class="white dtc v-mid w-100 h-100 child bg-black-50 pa5 sans-serif">
+        <article class="center mw5 mw6-ns hidden ba mv4">
+          <h1 class="f4 bg-near-black white mv0 pv2 ph3">Graphic Narrative</h1>
+          <div class="pa3 bt">
+            <p class="f6 f5-ns lh-copy measure mv0">
+              We set out our manifesto in the form of a non-linear graphic narrative. It follows our hero and protagonist as he ventures into our library and loses all sense of time.
+            </p>
+          </div>
+        </article>
+      </span>
+    </a>
 
-    <main class="cf w-100">
+    <a name="marker2" href="microcitylibrary.html#marker2" style="background-image: url(resources/library_3.jpg)"; class="link w-100 w-50-ns dt hide-child cover bg-center fl">
+      <span class="white dtc v-mid w-100 h-100 child bg-black-50 pa5 sans-serif">
+        <article class="center mw5 mw6-ns hidden ba mv4">
+          <h1 class="f4 bg-near-black white mv0 pv2 ph3">1:100 Model</h1>
+          <div class="pa3 bt">
+            <p class="f6 f5-ns lh-copy measure mv0">
+              It was a precisely crafted model at 1:100 scale, featuring laser cut elements, hand-crafted elements and an electroluminescent (EL) panel to provide an interior understanding of the library and its programmatic relations.
+            </p>
+          </div>
+        </article>
+      </span>
+    </a>
+
+    <a name="marker3" href="microcitylibrary.html#marker3" style="background-image: url(resources/library_2.jpg)"; class="link w-100 w-50-ns dt hide-child cover bg-center fn">
+      <span class="white dtc v-mid w-100 h-100 child bg-black-50 pa5 sans-serif">
+        <article class="center mw5 mw6-ns hidden ba mv4">
+          <h1 class="f4 bg-near-black white mv0 pv2 ph3">Protocol for Growth</h1>
+          <div class="pa3 bt">
+            <p class="f6 f5-ns lh-copy measure mv0">
+              Just over a metre long, this diagrammatic model, while not a direct representation of our designed library, accentuated the modularity and protocol for growth highlighting new permutations and combinations.
+            </p>
+          </div>
+        </article>
+      </span>
+    </a>
+
+    <a name="marker4" href="microcitylibrary.html#marker4" style="background-image: url(resources/library_1.jpg)"; class="link w-100 w-50-ns dt hide-child cover bg-center fl">
+      <span class="white dtc v-mid w-100 h-100 child bg-black-50 pa5 sans-serif">
+        <article class="center mw5 mw6-ns hidden ba mv4">
+          <h1 class="f4 bg-near-black white mv0 pv2 ph3">Model as a Representation</h1>
+          <div class="pa3 bt">
+            <p class="f6 f5-ns lh-copy measure mv0">
+              Our final project model was not place on site nor was it the actual library, but rather, it was a representational model that shared moments from within our library to create character within each space.
+            </p>
+          </div>
+        </article>
+      </span>
+    </a>
+
+    <a name="marker5" href="microcitylibrary.html#marker5" style="background-image: url(resources/library_4.jpg)"; class="link w-100 w-50-ns dt hide-child cover bg-center fn">
+      <span class="white dtc v-mid w-100 h-100 child bg-black-50 pa5 sans-serif">
+        <article class="center mw5 mw6-ns hidden ba mv4">
+          <h1 class="f4 bg-near-black white mv0 pv2 ph3">Sectional Model</h1>
+          <div class="pa3 bt">
+            <p class="f6 f5-ns lh-copy measure mv0">
+              Part of the reason it was a section model was so that we had a flat edge to create a panning video, as can be seen above. This was to create a realisation of the experience of passing through the library from the perspective of a passerby.
+            </p>
+          </div>
+        </article>
+      </span>
+    </a>
+
+<!--     <main class="cf w-100">
 
       <div class="fl w-100 w-50-ns">
         <div class="aspect-ratio aspect-ratio--6x4">
@@ -123,11 +170,11 @@
         </div>
       </div>
 
-    </main>
+    </main> -->
 
     <img src="resources/library_axo.jpg" class="w-100 pt3 pb3" />
 
-  </div>
+  </div><
 
   <footer class="pv4 ph3 bg-dark-gray">
     <a name="contact"></a>
